Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-50153

[OS X 10.10] Crash on drawing image

    XMLWordPrintable

Details

    • macOS
    • 6ec7d7658d87132358e3c149f5e44e975748ae4b

    Description

      The attached test application crashes on Mac.

      A few observations:

      • It seems to be crashing in src/gui/painting/qpaintengine_raster.cpp where it's calling blend function.
      • Also if translate() isn't called in test application it doesn't crash or if some other render hint is used.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              dedietri Gabriel de Dietrich (drgvond)
              kileppal Kimmo Leppälä
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes